--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ nav .fas {
 
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url(images/phone-background.png);
+    background-image: url(images/phone-dog.jpg);
   }
   .header-text {
     margin-top: 100%;
