--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #header {
   width: 100%;
   height: 100vh;
-  background-image: url(images/Dog.png);
+  background-image: url(images/computer-background.png);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -76,7 +76,7 @@ nav ul li a:hover::after {
   color: #ababab;
 }
 #about p {
-  margin-bottom: 25px; /* Adjust the value to increase or decrease the gap */
+  margin-bottom: 25px;
 }
 .row {
   display: flex;
@@ -333,7 +333,7 @@ nav .fas {
 
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url(images/phone-dog.jpg);
+    background-image: url(images/phone-background.jpg);
   }
   .header-text {
     margin-top: 100%;
