Change in Tabs color

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ nav ul li a:hover::after {
   font-weight: 500;
   cursor: pointer;
   position: relative;
+  color: #fff;
 }
 .tab-links::after {
   content: "";
